--- a/qyz.html
+++ b/qyz.html
@@ -3,17 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<title>企业站首页</title>
+
+	<link rel="stylesheet" href="css/swiper-4.3.5.min.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<!--<script src="animate.js"></script>-->
 	<link rel="stylesheet" href="http://at.alicdn.com/t/font_815340_m2uexlnh8c.css">
 	<link rel="stylesheet" href="http://at.alicdn.com/t/font_809571_1vs28vuj392.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/base.css">
-	<link rel="stylesheet" href="css/swiper-4.3.5.min.css">
-	<script src="swiper-4.3.5.min.js"></script>
 	<link rel="stylesheet" href="css/qyz.css">
 	<link rel="stylesheet" href="css/xiangqing.css">
-	<script src="animate.js"></script>
+
 	<script src="qyz.js"></script>
+
 </head>
 <body>
 <aside>
@@ -588,6 +590,7 @@
 <footer>武汉雅禾星烁文化传播有限公司<br>
 
 	湖北省武汉市江夏区百捷大厦B座11楼</footer>
+<script src="swiper-4.3.5.min.js"></script>
 	<script>
         var mySwiper = new Swiper ('.swiper-container', {
             direction: 'horizontal',
@@ -615,6 +618,3 @@
 	</script>
 </body>
 </html>
-<script>
-
-</script>
